--- a/app/client/css/partials/elements/_others.scss
+++ b/app/client/css/partials/elements/_others.scss
@@ -39,6 +39,7 @@ main>.container>.loading {
 }
 
 .static-alerts {
+  height: auto;
   list-style: none;
   margin: 0;
   width: 100%;
